2006-11-13  Frederic Ruaudel <grumz@grumz.net>

	* icons/16x16/nautilus-actions.svg:
	* icons/22x22/nautilus-actions.svg:
	* icons/scalable/nautilus-actions.svg: Icons relicencing
	from CC-by-SA to GPL for compatibility with n-a license.
	(thanks to Ulisse Perusin)

	* icons/Makefile.am:
	* icons/32x32/Makefile.am:
	* icons/32x32/Makefile.in:
	* icons/32x32/nautilus-actions.png:
	* icons/32x32/nautilus-actions.svg: Adding 32x32 format
	according to the new Tango and GIT standards (thanks to Ulisse
	Perusin)

2006-09-12  Frederic Ruaudel <grumz@grumz.net>

	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config.h:
	* nact/nact-import-export.c: Fixed problem with subsequent schema 
	importation which seems to fails with an "already existing config" 
	error (Bug #354623)

	* nact/nautilus-actions-config.glade: Fix problem with "duplicate"
	button sensitiveness when running Nact without any action configured.
	(Bug #355451 - apply patch from Deji Akingunola)

2006-07-18  Frederic Ruaudel <grumz@grumz.net> 1.4

	* plugin/nautilus-actions-utils.c: Change the creation of the %M
	parameter list by getting the base folder of each file instead of just
	the one of the first file for each. This is to deal with SavedSearch folder
	in nautilus >= 2.14 which can have file from different folder gathered in the
	same nautilus window. (Bug reported by David Winick)

2006-06-29  Frederic Ruaudel <grumz@grumz.net>

	* po/POTFILES.in: Add new files containing translatable strings

2006-06-27  Frederic Ruaudel <grumz@grumz.net>

	* libnautilus-actions/nautilus-actions-config-gconf-reader.c:
	* libnautilus-actions/nautilus-actions-config-schema-reader.c:
	* libnautilus-actions/nautilus-actions-config-schema-reader.h:
	* libnautilus-actions/nautilus-actions-config-xml.c:
	* libnautilus-actions/nautilus-actions-config-xml.h:
	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config.h: