@@ -9,8 +9,8 @@ nautilus_actions_convert_SOURCES =	\
 	nautilus-actions-convert.c 				
 
 nautilus_actions_convert_LDADD =						\
-	$(NAUTILUS_ACTIONS_UTILS_LIBS)					\
-	$(top_builddir)/libnautilus-actions/libnautilus-actions.la
+	$(top_builddir)/libnautilus-actions/libnautilus-actions.la \
+	$(NAUTILUS_ACTIONS_UTILS_LIBS)
 
 nautilus_actions_new_config_SOURCES =	\
 	nautilus-actions-tools-utils.c	\
@@ -18,5 +18,5 @@ nautilus_actions_new_config_SOURCES =	\
 	nautilus-actions-new-config.c 				
 
 nautilus_actions_new_config_LDADD =						\
-	$(NAUTILUS_ACTIONS_UTILS_LIBS)					\
-	$(top_builddir)/libnautilus-actions/libnautilus-actions.la
+	$(top_builddir)/libnautilus-actions/libnautilus-actions.la \
+	$(NAUTILUS_ACTIONS_UTILS_LIBS)
